--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "In this app you will be able to read and write  about technical concepts, recent advancements, and new technologies.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
