--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "In this app you will be able to read and write  about technical concepts, recent advancements, and new technologies.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/OrtalWikoff/Tech-Blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.2.0",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
